<resources>
    <string name="app_name">MobilApplication</string>
    <string name="login">Belépés</string>
    <string name="register">Regisztráció</string>
    <string name="title">Doggo Sessions</string>
    <string name="fullname">Teljes név</string>
    <string name="address">Lakcím</string>
    <string name="email">E-mail cím</string>
    <string name="phoneNumber">Telefonszám</string>
    <string name="username">Felhasználónév</string>
    <string name="password">Jelszó</string>
    <string name="login_here">A bejelentkezéshez kattintson ide!</string>
    <string name="register_here">Regisztrálás itt</string>
    <string name="appointment">Időpont foglalás</string>
    <string name="myAppointment">Saját időpontok</string>
    <string name="dogRegister">Kutyám adatai</string>
    <string name="kutyaAdatok">Kutyám adatai</string>
    <string name="Agressiv">Agresszív-e</string>
    <string name="furType">Szorzet Tipus</string>
    <string name="age">Életkor</string>
    <string name="Fajta">Kutya fajtája</string>
    <string name="usersName">Tulaj neve</string>
    <string name="ownAppointment">Saját időpontok</string>
</resources>